# ece414_Lindquist_Pang

./: Lab3.drawio  debounce_sw1_demo.c  gpio_demo.c  led_out.c  led_out.h  sw_in.h  timer.c  timer.h
Final Project/: Adafruit_LSM6DSOX.c  Bluetooth.h  LSM6DSOX.h  Part1.ipt
Final Project/CarDraft/: CMakeLists.txt  car_main.c
Final Project/HandControlDraft/: CMakeLists.txt  Display.c  Display.h  HC05.c  LSM6DSOX.c  main.c  main_test.c  protocol.h  sensor_fusion.c  sensor_fusion.h
FinalProject/: Adafruit_LSM6DSOX.c  Bluetooth.c  adafruit_lsm6dsox_test.c  tiltcar.drawio
FinalProject/CarDraft/: Car_Control.c  Car_Control.h  DRV8871.c  DRV8871.h  protocol.h
FinalProject/CarPart/: CarPart.ino
FinalProject/HandControl/: HandControl.ino
FinalProject/HandControlDraft/: CMakeLists.txt  Display.c  Display.h  HC05.c  HC05.h  LSM6DSOX.c  LSM6DSOX.h  main_test.c  sensor_fusion.c  sensor_fusion.h
FinalProject/Hardware 3D Printing/: Part1 (1).dwfx  Part1 (1).dwg  Part1 (1).ipt
Lab1/: Untitled Diagram.drawio  blink2.c
Lab2/: CMakeLists.txt  led_out.c  led_out.h  main.c  sw_in.c  sw_in.h
Lab3/: CMakeLists.txt  debounce_sw1.c  debounce_sw1.h  debounce_sw1_demo.c  led_out.c  led_out.h  sw_in.c  sw_in.h  timer.c  timer.h  uart_demo.c
Lab3/Part1/: CMakeLists.txt  debounce_sw1_demo.c  led_out.c
Lab3/Part2/: CMakeLists.txt  PONG1D.c  debounce_sw1.c  debounce_sw1.h  debounce_sw2.c  debounce_sw2.h  led_out.h  sw_in.h  timer.c  timer.h
Lab4/: CMakeLists.txt  ts_lcd.c  ts_lcd.h  ts_test.c
Lab4/sch/: #auto_saved_files#  Lab4.kicad_prl  Lab4.kicad_pro  Lab4.kicad_sch  sch.kicad_pro  sch.kicad_sch  ~Lab4.kicad_sch.lck  ~sch.kicad_sch.lck
Lab5/: CMakeLists.txt  Interface.c  Interface.h  Interface_test.c  calculator.c  calculator.h  main.c  ts_lcd.c  ts_lcd.h
Lab6/: CMakeLists.txt  Lab6.kicad_pro  Lab6.kicad_sch  PID.c  controller.c  controller.h  debounce_sw1.c  debounce_sw1.h  lcd.c  lcd.h  ts_lcd.h
